Backend  and Frontend Upadate

--- a/backend/server/.env
+++ b/backend/server/.env
@@ -1,3 +1,4 @@
-DB= mongodb://localhost:27017 
-JWTPRIVATEKEY = $20IT0533$
-SALT =10
+DB= mongodb://localhost:27017/User_Db
+# JWTPRIVATEKEY = $20IT0533$
+# SALT =10
+PORT= 3002
